<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/bidi_pic"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:src="@drawable/sono_bidi_min" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"
                android:src="@drawable/sono_logo_black_min" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sofiapro_regular"
                android:text="@string/title"
                android:textAllCaps="true"
                android:textColor="#000"
                android:textSize="22sp" />

            <View
                android:layout_width="150dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="#2FA38D">

            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/sofiapro_regular"
                android:text="@string/subtitle"
                android:textColor="#000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginStart="22dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:onClick="showMap">

                    <ImageView
                        android:id="@+id/location"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:src="@drawable/location_icon" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/location"
                        android:layout_toRightOf="@id/location"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sofiapro_regular"
                            android:text="@string/address1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sofiapro_regular"
                            android:text="@string/address2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sofiapro_regular"
                            android:text="@string/address3" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:onClick="sendEmail">

                    <ImageView
                        android:id="@+id/email"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:src="@drawable/envelope_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/email"
                        android:layout_toRightOf="@id/email"
                        android:fontFamily="@font/sofiapro_regular"
                        android:text="@string/email" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="goToPage">

                    <ImageView
                        android:id="@+id/www"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="12dp"
                        android:src="@drawable/www_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/www"
                        android:layout_toRightOf="@id/www"
                        android:fontFamily="@font/sofiapro_regular"
                        android:text="@string/domain" />

                </RelativeLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/interior1_pic"
                android:scaleType="centerCrop"
                android:src="@drawable/interior_min" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:background="#2FA38D">

            </View>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/interior2_pic"
                android:scaleType="centerCrop"
                android:src="@drawable/interior2_min" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
